changes, bug fixes, heads

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,20 @@
 # perfectUnityPlugin configuration
 
-max-homes: -1 # -1 = unlimited, or set a number to limit
-gui-size: 36 # size of the GUI (Must be divisible by 9)
+homes:
+  max-homes: -1 # -1 = unlimited, or set a number to limit
+  gui:
+    gui-size: 54 # size of the GUI (Must be divisible by 9)
+    pagination:
+      items-per-page: 45
+
+heads:
+  access-authorization: true # If a player should be able to access the heads GUI
+  possession-authorization: true # If authorization system for retrieval should be enabled: if false, then everyone can retrieve infinite amounts
+  authorization: # Classes of authorization ( How many heads a person is allowed to receive )
+    standard: -1 # What should be the standard for everyone if auth system is enabled and not yet customized per player
+    unlimited: -1
+    mod: 100
+    supporter: 50
+    senior: 20
+    beginner: 5
+    new: 2
