--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
             <version>1.20.4-R0.1-SNAPSHOT</version> <!-- Use your Paper version -->
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>com.mojang</groupId>
+            <artifactId>authlib</artifactId>
+            <version>1.5.25</version> <!-- Or latest -->
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
