--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: perfectUnityPlugin
-version: 1.3.1
+version: 1.3.2
 main: com.anon.perfectUnityPlugin.perfectUnityPlugin
 api-version: 1.20
 commands:
@@ -10,8 +10,11 @@ commands:
     description: Open the Home Manager GUI or Teleport to a Home using the [name]
     usage: /home [name]
   heads:
-    description: opens the heads gui
-    usage: /heads
+    description: opens the heads gui or gives heads
+    usage: /heads [name] [amount]
+  cchead:
+    description: Create a Custom Head
+    usage: /cchead <name> <base64> [name-color]
 permissions:
   perfectUnityPlugin.use:
     default: true
